# libcorkipset

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  COPYING  INSTALL  README.markdown
.buzzy/: links.yaml  package.yaml
.travis/: install  test
cmake/: FindCTargets.cmake  FindParseArguments.cmake  FindPrereqs.cmake
docs/: CMakeLists.txt  conf.py  index.rst
examples/: CMakeLists.txt  contains.c  ipv4-set-size.c
include/: CMakeLists.txt
include/ipset/: bits.h  errors.h  ipset.h  logging.h
include/ipset/bdd/: nodes.h
include/libcork/: ipset.h
include/libcork/ipset/: bits.h  errors.h  logging.h  nodes.h
include/libcorkipset/: ipset.h
python/src/ipset/: __init__.py  c.py
python/src/ipset/tests/: __init__.py  c.py  obj.py
share/: CMakeLists.txt
src/: CMakeLists.txt  ipset.pc.in  libcorkipset.pc.in  wscript
src/ipsetbuild/: ipsetbuild.c
src/ipsetcat/: ipsetcat.c
src/ipsetdot/: ipsetdot.c
src/libcorkipset/: general.c
src/libcorkipset/bdd/: assignments.c  basics.c  bdd-iterator.c  expanded.c  reachable.c  read.c  write.c
src/libcorkipset/map/: allocation.c  inspection-template.c.in  inspection.c  ipv4_map.c  ipv6_map.c  storage.c
src/libcorkipset/set/: allocation.c  inspection-template.c.in  inspection.c  ipv4_set.c  ipv6_set.c  iterator.c  storage.c
src/libipset/: general.c  internal.h
src/libipset/bdd/: assignments.c  basics.c  bdd-iterator.c  binary-operators.c  expanded.c  internal.h  reachable.c  read.c  trinary-operators.c  write.c
src/libipset/map/: allocation.c  inspection-template.c.in  inspection.c  ipv4_map.c  ipv6_map.c  modify-template.c.in  storage.c
src/libipset/set/: allocation.c  inspection-template.c.in  inspection.c  internal-template.c.in  ipv4_set.c  ipv6_set.c  iterator.c  modify-template.c.in  read-file.c  storage.c
tests/: CMakeLists.txt  run-test  test-assignment.c  test-bdd.c  test-ipmap.c  test-ipset.c  test-iterator.c  train  wscript
tests/errors/empty-cidr/: err
tests/errors/ipsetcat-empty-input/: err
tests/errors/ipsetdot-file-not-found/: err
tests/errors/nonnumeric-cidr/: err
tests/round-trip/10.0.5.64-30/: command  out
